src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__action_as_reference_does_not_cause_parentheses_diagnostic.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: diagnostics
---
error[E037]: Invalid assignment: cannot assign 'FOO' to 'fb1'
  ┌─ <internal>:7:28
  │
7 │             address := ADR(fb1.FOO);
  │                            ^^^^^^^ Invalid assignment: cannot assign 'FOO' to 'fb1'
